# goit-pythonweb-hw-012

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_static/: bizstyle.js
migrations/: env.py
migrations/versions/: 5bc1bbd24be1_add_users_role.py  931ba90b538d_init.py  c831acd85f09_add_user.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  redis_cache.py  upload_file.py  users.py
src/services/templates/: reset_password.html  verify_email.html
tests/: conftest.py  test_contacts_repository_unit.py  test_integration_auth.py  test_integration_contacts.py  test_integration_users.py  test_users_repository_unit.py
